--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "description": "",
   "dependencies": {
     "web3": "^4.16.0"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.22.19"
   }
 }
